--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  functions = "netlify-functions"
+  functions = "functions"
 
 [[plugins]]
-  package = "@netlify/plugin-functions-core"
+  package = "@netlify/functions"
